--- a/FindAPet2/Gemfile
+++ b/FindAPet2/Gemfile
@@ -55,3 +55,6 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 #Use PaperClip Gem
 gem "paperclip", "~> 5.0.0"
+
+#Use imgurapi Gem
+gem 'imgurapi'
