--- a/FindAPet2/Gemfile
+++ b/FindAPet2/Gemfile
@@ -57,9 +57,8 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "paperclip", "~> 5.0.0"
 
 #Enable S3 Uploading
-gem 'aws-sdk', '~> 3'
+gem 'aws-sdk', '< 2.0'
 
-#Enable dotenv-rails and faraday gems
+#Enable dotenv-rails and figaro gems
 gem 'dotenv-rails'
-
 gem "figaro"
